added web api controller

--- a/Shipbob/Views/Orders/Details.cshtml
+++ b/Shipbob/Views/Orders/Details.cshtml
@@ -11,6 +11,14 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.UserId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.UserId)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.OrderDate)
         </dt>
 
