--- a/Shipbob/Views/Orders/Index.cshtml
+++ b/Shipbob/Views/Orders/Index.cshtml
@@ -12,10 +12,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.OrderDate)
+            @Html.DisplayNameFor(model => model.UserId)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UserName)
+            @Html.DisplayNameFor(model => model.OrderDate)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.FirstName)
@@ -44,10 +44,10 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.OrderDate)
+            @Html.DisplayFor(modelItem => item.UserId)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.UserName)
+            @Html.DisplayFor(modelItem => item.OrderDate)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FirstName)
