--- a/Shipbob/Views/Home/Index.cshtml
+++ b/Shipbob/Views/Home/Index.cshtml
@@ -2,4 +2,4 @@
     ViewBag.Title = "Home Page";
 }
 
-@Html.ActionLink("users", "Index", "Users", null, new { @class="btn btn-default"})
+@Html.Partial("ngUserControl")
