--- a/Shipbob/Views/Home/Index.cshtml
+++ b/Shipbob/Views/Home/Index.cshtml
@@ -2,4 +2,26 @@
     ViewBag.Title = "Home Page";
 }
 
-@Html.Partial("ngUserControl")
+<div ng-app="myApp" ng-controller="customersCtrl">
+
+    <div>
+        <table class="table">
+            <tr ng-repeat="x in names">
+                <td>{{ x.firstName }}</td>
+                <td>{{ x.lastName }}</td>
+                <td><a ng-href="~/Orders/UserOrder?userid={{x.userId}}" class="btn btn-default btn-xs">View Orders</a></td>
+            </tr>
+        </table>
+    </div>
+
+    <div ng-hide="isAddForm">
+        <button ng-click="isAddForm=true;" class="btn btn-default btn-xs">Add User</button>
+    </div>
+    <div ng-show="isAddForm">
+        <span>First Name: <input type="text" name="firstName" ng-model="firstName" class="form-control" required /></span>
+        <span>Last Name: <input type="text" name="lastName" ng-model="lastName" class="form-control" required /></span>
+        <button ng-click="PostData()" class="btn btn-primary btn-xs">Add</button> {{ PostDataResponse }}
+        <button ng-click="isAddForm=false;" class="btn btn-default btn-xs">Cancel</button>
+    </div>
+
+</div>
