--- a/Shipbob/Views/Orders/UserOrder.cshtml
+++ b/Shipbob/Views/Orders/UserOrder.cshtml
@@ -5,4 +5,61 @@
 
 <h2>Orders For @ViewBag.Name</h2>
 
-@Html.Partial("ngOrderControl")
+
+<div ng-app="myApp" ng-controller="ordersCtrl">
+
+    <div ng-hide="isAddForm">
+        <button ng-click="isAddForm=true;" class="btn btn-default btn-xs">Add Order</button>
+    </div>
+    <div ng-show="isAddForm">
+        <p>Tracking ID: <input type="text" name="trackingId" ng-model="newOrder.trackingId" required /></p>
+        <p>First Name: <input type="text" name="firstName" ng-model="newOrder.firstName" required /></p>
+        <p>Last Name: <input type="text" name="lastName" ng-model="newOrder.lastName" required /></p>
+        <p>Address Line 1 <input type="text" name="AddressLine1" ng-model="newOrder.addressLine1" required /></p>
+        <p>Address Line 2 <input type="text" name="AddressLine2" ng-model="newOrder.addressLine2" required /></p>
+        <p>City <input type="text" name="City" ng-model="newOrder.city" required /></p>
+        <p>State <input type="text" name="State" ng-model="newOrder.state" required /></p>
+        <p>Postal Code <input type="text" name="PostalCode" ng-model="newOrder.postalCode" required /></p>
+        <button ng-click="addOrder()" class="btn btn-default btn-xs">Add</button>
+        <button ng-click="isAddForm=false;" class="btn btn-default btn-xs">Cancel</button>
+    </div>
+
+    <hr />
+    <div ng-repeat="x in users.orders">
+        <div ng-hide="isEditForm">
+            <div>
+                <span>Tracking ID: {{x.trackingId}}</span>
+            </div>
+            <div>
+                <span>First Name: {{x.firstName}}</span>
+                <span>Last Name: {{x.lastName}}</span>
+            </div>
+            <div>
+                <span>Address Line 1 {{x.addressLine1}}</span>
+                <span>Address Line 2 {{x.addressLine2}}</span>
+                <span>City {{x.city}}</span>
+                <span>State {{x.state}}</span>
+                <span>Postal Code {{x.postalCode}}</span>
+            </div>
+            <div>
+                <button ng-click="isEditForm=true;" class="btn btn-default btn-xs">Edit Order</button>
+                <button ng-click="deleteOrder(x.orderId)" class="btn btn-danger btn-xs">Delete Order</button>
+            </div>
+        </div>
+        <div ng-show="isEditForm">
+            <p>Tracking ID: <input type="text" name="trackingId" ng-model="x.trackingId" required /></p>
+            <p>First Name: <input type="text" name="firstName" ng-model="x.firstName" required /></p>
+            <p>Last Name: <input type="text" name="lastName" ng-model="x.lastName" required /></p>
+            <p>Address Line 1 <input type="text" name="AddressLine1" ng-model="x.addressLine1" required /></p>
+            <p>Address Line 2 <input type="text" name="AddressLine2" ng-model="x.addressLine2" required /></p>
+            <p>City <input type="text" name="City" ng-model="x.city" required /></p>
+            <p>State <input type="text" name="State" ng-model="x.state" required /></p>
+            <p>Postal Code <input type="text" name="PostalCode" ng-model="x.postalCode" required /></p>
+            <button ng-click="updateOrder(x)" class="btn btn-warning btn-xs">update</button>
+            <button ng-click="isEditForm=false;" class="btn btn-info btn-xs">Cancel</button>
+        </div>
+    </div>
+
+
+
+</div>
